--- a/about-us.html
+++ b/about-us.html
@@ -4,6 +4,37 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>About us</title>
+        <script src="./js.js" defer></script>
+        <link rel="stylesheet" href="style.css" />
     </head>
-    <body></body>
+    <body>
+        <!-- nav -->
+        <nav class="navbar">
+            <div class="nav-center">
+                <!-- header -->
+                <div class="nav-header">
+                    <a href="index.html" class="nav-logo">
+                        <img
+                            src="img/ratatouille.png"
+                            height="100"
+                            alt="Ratatouille"
+                        />
+                    </a>
+                </div>
+
+                <div class="nav-link">
+                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="recipes.html" class="nav-link">Recipes</a>
+                    <a href="blog.html" class="nav-link">Blog</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="about-us.html" class="nav-link">About us</a>
+                    <!-- <div class="nav-link contact-link">
+                        <a href="contact.html" class="btn">Contact</a>
+                    </div> -->
+                </div>
+            </div>
+        </nav>
+        <!-- nav of end -->
+        <h1>About us</h1>
+    </body>
 </html>
