--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>FoodieViet</title>
+        <title>Ratatouille</title>
+        <script src="./js.js" defer></script>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <!-- nav -->
@@ -13,13 +15,11 @@
                 <div class="nav-header">
                     <a href="index.html" class="nav-logo">
                         <img
-                            src="img/foodieViet.png"
+                            src="img/ratatouille.png"
                             height="100"
-                            alt="FoodieViet"
+                            alt="Ratatouille"
                         />
                     </a>
-
-                    <button type="button" class="btn nav-btn"></button>
                 </div>
 
                 <div class="nav-link">
@@ -28,12 +28,13 @@
                     <a href="blog.html" class="nav-link">Blog</a>
                     <a href="contact.html" class="nav-link">Contact</a>
                     <a href="about-us.html" class="nav-link">About us</a>
-                    <div class="nav-link contact-link">
+                    <!-- <div class="nav-link contact-link">
                         <a href="contact.html" class="btn">Contact</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </nav>
         <!-- nav of end -->
+        <h1>Home</h1>
     </body>
 </html>
