--- a/index.html
+++ b/index.html
@@ -1,118 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Ratatouille</title>
-        <link
-            rel="apple-touch-icon"
-            sizes="57x57"
-            href="/ico/apple-icon-57x57.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="60x60"
-            href="/ico/apple-icon-60x60.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="72x72"
-            href="/ico/apple-icon-72x72.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="76x76"
-            href="/ico/apple-icon-76x76.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="114x114"
-            href="/ico/apple-icon-114x114.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="120x120"
-            href="/ico/apple-icon-120x120.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="144x144"
-            href="/ico/apple-icon-144x144.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="152x152"
-            href="/ico/apple-icon-152x152.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="/ico/apple-icon-180x180.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="192x192"
-            href="/ico/android-icon-192x192.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="/ico/favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="96x96"
-            href="/ico/favicon-96x96.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="/ico/favicon-16x16.png"
-        />
+
+        <link rel="apple-touch-icon" sizes="57x57" href="/ico/apple-icon-57x57.png" />
+        <link rel="apple-touch-icon" sizes="60x60" href="/ico/apple-icon-60x60.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="/ico/apple-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="/ico/apple-icon-76x76.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="/ico/apple-icon-114x114.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="/ico/apple-icon-120x120.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="/ico/apple-icon-144x144.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="/ico/apple-icon-152x152.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/ico/apple-icon-180x180.png" />
+        <link rel="icon" type="image/png" sizes="192x192" href="/ico/android-icon-192x192.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/ico/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="96x96" href="/ico/favicon-96x96.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/ico/favicon-16x16.png" />
         <link rel="manifest" href="/ico/manifest.json" />
         <meta name="msapplication-TileColor" content="#ffffff" />
-        <meta
-            name="msapplication-TileImage"
-            content="./ico/ms-icon-144x144.png"
-        />
+        <meta name="msapplication-TileImage" content="./ico/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
 
+        <!-- Link to files -->
         <script src="./js.js" defer></script>
         <link rel="stylesheet" href="style.css" />
+
+        <!-- Box Icon -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
     </head>
     <body>
         <!-- nav -->
-        <nav class="navbar">
-            <div class="nav-center">
-                <!-- header -->
-                <div class="nav-header">
-                    <a href="index.html" class="nav-logo">
-                        <img
-                            src="img/ratatouille.png"
-                            height="100"
-                            alt="Ratatouille"
-                        />
-                    </a>
-                </div>
-
-                <div class="nav-link">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="recipes.html" class="nav-link">Recipes</a>
-                    <a href="blog.html" class="nav-link">Blog</a>
-                    <a href="contact.html" class="nav-link">Contact</a>
-                    <a href="about-us.html" class="nav-link">About us</a>
-                    <!-- <div class="nav-link contact-link">
-                        <a href="contact.html" class="btn">Contact</a>
-                    </div> -->
-                </div>
+        <header>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="img/ratatouille original.png" alt="Ratatouille" />
+                </a>
             </div>
-        </nav>
-        <!-- nav of end -->
 
-        <h1>Home</h1>
+            <!-- Menu Icon -->
+
+            <div class="bx bx-menu" id="menu-icon"></div>
+            <!-- Nav List -->
+            <div class="nav-list">
+                <ul>
+                    <li><a href="index.html" class="home-active">Home</a></li>
+                    <li><a href="recipes.html">Recipe</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="about-us.html">About us</a></li>
+                </ul>
+            </div>
+            <!-- Profile -->
+            <div class="profile">
+                <img src="img/ratatouille icon.png" alt="Remy" />
+                <span>Remy</span>
+                <i class="bx bx-caret-down"></i>
+            </div>
+        </header>
+        <!-- nav of end -->
     </body>
 </html>
