--- a/index.html
+++ b/index.html
@@ -119,12 +119,60 @@
         </section>
         <!-- End of home swiper -->
 
-        <!-- Trending now -->
-        <section class="Trending-now">
-            <div class="separator"></div>
-            <h1>TRENDING NOW</h1>
+        <!-- Trending -->
+        <section class="Trending">
+            <hr class="separator" />
+            <div class="trending-now-wrapper">
+                <div class="Trending-now-title">
+                    <h2>XU HƯỚNG</h2>
+                </div>
+                <div class="trending-card-wrapper">
+                    <div class="card" style="width: 18rem">
+                        <a href="#">
+                            <img src="/img/trending-now.webp" class="card-img-top" alt="Food image" />
+                            <div class="card-body">
+                                <p class="card-text">Bánh waffle siro bơ</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card" style="width: 18rem">
+                        <a href="#">
+                            <img src="/img/trending-now-2.webp" class="card-img-top" alt="Food image" />
+                            <div class="card-body">
+                                <p class="card-text">Bò hầm kiểu Pháp</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card" style="width: 18rem">
+                        <a href="#">
+                            <img src="/img/trending-now-3.webp" class="card-img-top" alt="Food image" />
+                            <div class="card-body">
+                                <p class="card-text">Bánh táo crumble</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card" style="width: 18rem">
+                        <a href="#">
+                            <img src="/img/trending-now-4.webp" class="card-img-top" alt="Food image" />
+                            <div class="card-body">
+                                <p class="card-text">Chocolate mousse.</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="dont-miss-wrapper">
+                <div class="dont-miss-title">
+                    <h2>ĐỪNG BỎ LỠ</h2>
+                </div>
+            </div>
         </section>
-        <!-- End of trending now -->
+        <!-- End of trending -->
+
+        <!-- Category -->
+        <section></section>
+        <!-- End of category -->
 
         <script src="js.js" defer></script>
         <!-- Bootstrap -->
