--- a/index.html
+++ b/index.html
@@ -166,13 +166,105 @@
                 <div class="dont-miss-title">
                     <h2>ĐỪNG BỎ LỠ</h2>
                 </div>
+                <div class="card-container">
+                    <div class="card text-bg-dark">
+                        <a href="#">
+                            <img src="/img/dont-miss-1.webp" class="card-img" alt="Food image" />
+                            <div class="card-img-overlay">
+                                <p class="card-subtitle">Bộ sưu tập</p>
+                                <h3 class="card-title">Công thức ớt hầm ngon nhất</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card text-bg-dark">
+                        <a href="#">
+                            <img src="/img/dont-miss-2.webp" class="card-img" alt="Food image" />
+                            <div class="card-img-overlay">
+                                <p class="card-subtitle">Bộ sưu tập</p>
+                                <h3 class="card-title">Công thức chế biến cà tím đầy sáng tạo</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card text-bg-dark">
+                        <a href="#">
+                            <img src="/img/dont-miss-3.webp" class="card-img" alt="Food image" />
+                            <div class="card-img-overlay">
+                                <p class="card-subtitle">Bộ sưu tập</p>
+                                <h3 class="card-title">Công thức nấu gà nhanh và dễ dàng</h3>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="explore-more-wrapper">
+                <div class="explore-more-title">
+                    <h2>KHÁM PHÁ THÊM</h2>
+                </div>
+                <div class="card-container">
+                    <div class="card" style="width: 18rem">
+                        <a href="#">
+                            <img src="/img/explore-more.webp" class="card-img-top" alt="Food image" />
+                            <div class="card-body">
+                                <h3 class="card-text">Gà Tikka sốt cà chua Masala</h3>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card" style="width: 18rem">
+                        <a href="#">
+                            <img src="/img/explore-more-2.webp" class="card-img-top" alt="Food image" />
+                            <div class="card-body">
+                                <h3 class="card-text">Thịt xông khói chay</h3>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card" style="width: 18rem">
+                        <a href="#">
+                            <img src="/img/explore-more-3.webp" class="card-img-top" alt="Food image" />
+                            <div class="card-body">
+                                <h3 class="card-text">Sốt Big Mac chuẩn vị McDonald</h3>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="card" style="width: 18rem">
+                        <a href="#">
+                            <img src="/img/explore-more-4.webp" class="card-img-top" alt="Food image" />
+                            <div class="card-body">
+                                <p class="card-text">Thịt bò nướng hầm bằng nồi Crock-Pot</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- End of trending -->
 
-        <!-- Category -->
-        <section></section>
-        <!-- End of category -->
+        <!-- Favorite -->
+        <section>
+            <hr class="separator" />
+            <div class="favorite-wrapper">
+                <a href="#">
+                    <div class="card mb-3 fetured-recipe-collection">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="/img/romatic-dinner.webp" class="img-fluid rounded-start" alt="Food image" />
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </section>
+        <!-- End of Favorite -->
 
         <script src="js.js" defer></script>
         <!-- Bootstrap -->
