--- a/index.html
+++ b/index.html
@@ -245,23 +245,77 @@
         <!-- Favorite -->
         <section>
             <hr class="separator" />
-            <div class="favorite-wrapper">
+            <div class="title-wrapper">
                 <a href="#">
                     <div class="card mb-3 fetured-recipe-collection">
                         <div class="row g-0">
-                            <div class="col-md-4">
+                            <div class="col-md-8">
                                 <img src="/img/romatic-dinner.webp" class="img-fluid rounded-start" alt="Food image" />
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-3">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                                    <p class="card-subtitle">Bộ sưu tập</p>
+                                    <h3 class="card-title">Bữa Tối Lý Tưởng Cho Ngày Hẹn Hò</h3>
+                                    <p class="card-description">Tận hưởng bữa tối lãng mạn tại nhà – ngon hơn, tiết kiệm hơn, ý nghĩa hơn!</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </a>
+            </div>
+
+            <div class="fan-favorites-wrapper">
+                <div class="fan-favorites-title">
+                    <h2>FAN FAVORITES</h2>
+                </div>
+
+                <div class="card-container">
+                    <div class="row row-cols-1 row-cols-md-4 g-4">
+                        <div class="col">
+                            <div class="card">
+                                <a href="#">
+                                    <img src="" class="card-img-top" alt="Food image" />
+                                    <div class="card-body">
+                                        <h3 class="card-title">Card title</h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card">
+                                <a href="#">
+                                    <img src="" class="card-img-top" alt="Food image" />
+                                    <div class="card-body">
+                                        <h3 class="card-title">Card title</h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card">
+                                <a href="#">
+                                    <img src="" class="card-img-top" alt="Food image" />
+                                    <div class="card-body">
+                                        <h3 class="card-title">Card title</h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card">
+                                <a href="#">
+                                    <img src="" class="card-img-top" alt="Food image" />
+                                    <div class="card-body">
+                                        <h3 class="card-title">Card title</h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- End of Favorite -->
