--- a/index.html
+++ b/index.html
@@ -266,59 +266,112 @@
 
             <div class="fan-favorites-wrapper">
                 <div class="fan-favorites-title">
-                    <h2>FAN FAVORITES</h2>
+                    <h2>CÔNG THỨC ƯU THÍCH</h2>
                 </div>
 
                 <div class="card-container">
-                    <div class="row row-cols-1 row-cols-md-4 g-4">
+                    <div class="row row-cols-1 row-cols-md-4">
                         <div class="col">
-                            <div class="card">
-                                <a href="#">
-                                    <img src="" class="card-img-top" alt="Food image" />
-                                    <div class="card-body">
-                                        <h3 class="card-title">Card title</h3>
-                                    </div>
-                                </a>
-                            </div>
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-1.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Sườn nướng lò</h3>
+                                </div>
+                            </a>
                         </div>
 
                         <div class="col">
-                            <div class="card">
-                                <a href="#">
-                                    <img src="" class="card-img-top" alt="Food image" />
-                                    <div class="card-body">
-                                        <h3 class="card-title">Card title</h3>
-                                    </div>
-                                </a>
-                            </div>
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-2.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Thanh phô mai Mozzarella</h3>
+                                </div>
+                            </a>
                         </div>
 
                         <div class="col">
-                            <div class="card">
-                                <a href="#">
-                                    <img src="" class="card-img-top" alt="Food image" />
-                                    <div class="card-body">
-                                        <h3 class="card-title">Card title</h3>
-                                    </div>
-                                </a>
-                            </div>
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-3.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Bánh pancake thuần chay 5 phút</h3>
+                                </div>
+                            </a>
                         </div>
 
                         <div class="col">
-                            <div class="card">
-                                <a href="#">
-                                    <img src="" class="card-img-top" alt="Food image" />
-                                    <div class="card-body">
-                                        <h3 class="card-title">Card title</h3>
-                                    </div>
-                                </a>
-                            </div>
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-4.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Shakshuka</h3>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col">
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-5.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Sốt Teriyaki Nhà Hàng</h3>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col">
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-6.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Chili Skylike - Phiên Bản Mô Phỏng Skyline Chili</h3>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col">
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-7.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Bánh Chuối Hạt Thơm Ngon & Mềm Ẩm</h3>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col">
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-8.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Món Ớt Chuông Đoạt Giải</h3>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- End of Favorite -->
+
+        <!-- Footer -->
+        <footer>
+            <div class="footer-container">
+                <div class="social-icon">
+                    <a href="#"><i class="bx bxl-facebook-circle"></i></a>
+                    <a href="#"><i class="bx bxl-tiktok"></i></a>
+                    <a href="#"><i class="bx bxl-youtube"></i></a>
+                </div>
+
+                <div class="footer-nav">
+                    <ul>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="#">Recipes</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">About us</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>Copyright &copy;2025; Designed by <span class="designer">Remy</span></p>
+            </div>
+        </footer>
+        <!-- End of footer -->
 
         <script src="js.js" defer></script>
         <!-- Bootstrap -->
