--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -48,10 +48,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-                            <a class="nav-link" href="#">Recipe</a>
-                            <a class="nav-link" href="#">Blog</a>
-                            <a class="nav-link" href="#">Contact</a>
-                            <a class="nav-link" href="#">About us</a>
+                            <a class="nav-link" href="/recipe.html">Recipe</a>
+                            <a class="nav-link" href="/blog.html">Blog</a>
+                            <a class="nav-link" href="/contact.html">Contact</a>
+                            <a class="nav-link" href="/about-us.html">About us</a>
                         </ul>
                     </div>
 
@@ -342,6 +342,42 @@
                                 </div>
                             </a>
                         </div>
+
+                        <div class="col">
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-9.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Mì pasta bông cải xanh và tỏi</h3>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col">
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-10.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Cánh gà giòn lò nướng</h3>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col">
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-11.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Nướng bít tết hoàn hảo</h3>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col">
+                            <a href="#" class="card">
+                                <img src="/img/fan-favorite-12.webp" class="card-img-top" alt="Food image" />
+                                <div class="card-body">
+                                    <h3 class="card-title">Bánh quế Bỉ ngon nhất</h3>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -349,24 +385,42 @@
         <!-- End of Favorite -->
 
         <!-- Footer -->
-        <footer>
-            <div class="footer-container">
-                <div class="social-icon">
-                    <a href="#"><i class="bx bxl-facebook-circle"></i></a>
-                    <a href="#"><i class="bx bxl-tiktok"></i></a>
-                    <a href="#"><i class="bx bxl-youtube"></i></a>
-                </div>
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col">
+                        <h4>Ratatouille</h4>
+                        <ul>
+                            <li><a href="/about-us.html">Về chúng tôi</a></li>
+                            <li><a href="/blog.html">Blog</a></li>
+                            <li><a href="/recipe.html">Mục lục công thức</a></li>
+                            <li><a href="/contact.html">Liên hệ</a></li>
+                        </ul>
+                    </div>
 
-                <div class="footer-nav">
-                    <ul>
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="#">Recipes</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">About us</a></li>
-                    </ul>
+                    <div class="footer-col">
+                        <h4>Món ăn & Công thức</h4>
+                        <ul>
+                            <li><a href="#">Nhanh & Dễ dàng</a></li>
+                            <li><a href="#">Thuần chay</a></li>
+                            <li><a href="#">Nấu súp</a></li>
+                            <li><a href="#">Đồ uống</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-col">
+                        <h4>Theo dõi chúng tôi</h4>
+
+                        <div class="social-icon">
+                            <a href="#"><i class="bx bxl-facebook-circle"></i></a>
+                            <a href="#"><i class="bx bxl-tiktok"></i></a>
+                            <a href="#"><i class="bx bxl-youtube"></i></a>
+                        </div>
+                        <img src="img/ratatouille original.png" alt="Logo" />
+                    </div>
                 </div>
             </div>
+
             <div class="footer-bottom">
                 <p>Copyright &copy;2025; Designed by <span class="designer">Remy</span></p>
             </div>
