--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Công thức</title>
+        <title>Liên hệ</title>
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="57x57" href="/ico/apple-icon-57x57.png" />
@@ -48,9 +48,9 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <a class="nav-link" href="/index.html">Home</a>
-                            <a class="nav-link active" aria-current="page" href="/recipe.html">Recipe</a>
+                            <a class="nav-link" href="/recipe.html">Recipe</a>
                             <a class="nav-link" href="/blog.html">Blog</a>
-                            <a class="nav-link" href="/contact.html">Contact</a>
+                            <a class="nav-link active" aria-current="page" href="/contact.html">Contact</a>
                             <a class="nav-link" href="/about-us.html">About us</a>
                         </ul>
                     </div>
