--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                         <h4>Theo dõi chúng tôi</h4>
 
                         <div class="social-icon">
-                            <a href="#"><i class="bx bxl-facebook-circle"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=61574059620067"><i class="bx bxl-facebook-circle"></i></a>
                             <a href="#"><i class="bx bxl-tiktok"></i></a>
                             <a href="#"><i class="bx bxl-youtube"></i></a>
                         </div>
